--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chat-server",
-  "version": "2.8.1",
+  "version": "2.8.2",
   "description": "A chat server based on the microservice architecture to ensure high availability, high throughput, horizontal scalability.",
   "main": "",
   "repository": "https://github.com/ramank775/chat-server.git",
@@ -9,45 +9,42 @@
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "engines": {
     "node": ">16.0.0"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.658.1",
+    "@aws-sdk/s3-request-presigner": "^3.658.1",
     "@hapi/boom": "^10.0.1",
-    "@hapi/hapi": "^21.3.2",
-    "aws-sdk": "^2.1454.0",
-    "commander": "^11.0.0",
-    "firebase-admin": "^11.10.1",
-    "hot-shots": "^10.0.0",
-    "ioredis": "^5.3.2",
-    "joi": "^17.10.1",
+    "@hapi/hapi": "^21.3.10",
+    "commander": "^12.1.0",
+    "firebase-admin": "^12.5.0",
+    "hot-shots": "^10.1.1",
+    "ioredis": "^5.4.1",
+    "joi": "^17.13.3",
     "kafkajs": "2.2.4",
     "long": "^5.2.3",
-    "moment": "^2.29.4",
-    "mongodb": "^6.0.0",
-    "nats": "^2.16.0",
-    "node-fetch": "^2.6.6",
-    "protobufjs": "^7.2.5",
-    "short-uuid": "^4.2.2",
-    "winston": "^3.10.0",
-    "ws": "^8.14.1"
+    "luxon": "^3.5.0",
+    "mongodb": "^6.9.0",
+    "nats": "^2.28.2",
+    "node-fetch": "^2.7.0",
+    "protobufjs": "^7.4.0",
+    "short-uuid": "^5.2.0",
+    "winston": "^3.14.2",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.17",
-    "@babel/eslint-parser": "^7.22.15",
-    "@babel/preset-env": "7.22.15",
-    "eslint": "^8.49.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "@babel/core": "^7.25.2",
+    "@babel/eslint-parser": "^7.25.1",
+    "@babel/preset-env": "7.25.4",
+    "eslint": "^9.11.1",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.3",
-    "prettier": "3.0.3"
+    "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^9.1.6",
+    "prettier": "3.3.3",
+    "@stylistic/eslint-plugin-js": "^2.8.0"
   }
 }
